include font-awesome

--- a/bower.json
+++ b/bower.json
@@ -1,28 +1,29 @@
 {
-	"name": "splitexpenses",
-	"description": "Split Expenses",
-	"main": "index.js",
-	"authors": [
+  "name": "splitexpenses",
+  "description": "Split Expenses",
+  "main": "index.js",
+  "authors": [
     "Fabio Matias"
   ],
-	"license": "ISC",
-	"homepage": "https://github.com/zeosamaster/SplitExpenses",
-	"moduleType": [
+  "license": "ISC",
+  "homepage": "https://github.com/zeosamaster/SplitExpenses",
+  "moduleType": [
     "node"
   ],
-	"directory": "client/components",
-	"ignore": [
+  "directory": "client/components",
+  "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
     "tests"
   ],
-	"dependencies": {
-		"jquery": "~2.1.4",
-		"angular": "~1.4.8",
-		"angular-route": "~1.4.8",
-		"bootstrap": "~3.3.6",
-		"alertifyjs": "MohammadYounes/alertifyjs#~1.6.0"
-	}
+  "dependencies": {
+    "jquery": "~2.1.4",
+    "angular": "~1.4.8",
+    "angular-route": "~1.4.8",
+    "bootstrap": "~3.3.6",
+    "alertifyjs": "MohammadYounes/alertifyjs#~1.6.0",
+    "font-awesome": "~4.5.0"
+  }
 }
